--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,158 @@
     transform: rotate(360deg);
   }
 }
+
+{
+  box-sizing: border-box;
+}
+
+body{
+  height:auto ;
+  background-color: rgb(230, 230, 230);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.fluidForm {
+  background-image: url("assets/waves.svg");
+  width: 900px;
+  height: 600px;
+  padding-top: 60px;
+  background-color: rgb(230, 230, 230);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+  inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+}
+.form {
+  width: 900px;
+  height: 600px;
+  padding-top: 60px;
+  background-color: rgb(230, 230, 230);
+  border: rgb(255, 255, 255) 3px solid;
+  border-radius: 0px 50px 0px 50px;
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8),
+  inset 5px 5px 20px 5px rgba(119, 119, 119, 0.3),
+  inset -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+}
+.top-text, .username, .password, .sub-text, .btn, .note, .submit{
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  outline: none;
+}
+.top-text{
+  font-size: 80px;
+}
+.sub-text{
+  margin-top: 10%;
+  margin-bottom: 10px;
+  font-size: 30px;
+}
+.username, .password{
+  font-size: 15px;
+  margin-top: 50px;
+  padding: 15px;
+  background-color: rgb(233, 231, 231);
+  width: 350px;
+  border-radius: 30px;
+  border: solid 3px rgb(255, 255, 255);
+  box-shadow: inset 10px 10px 20px 0px rgba(119, 119, 119, 0.3),
+  inset -10px -10px 20px 0px rgba(255, 255, 255, 0.8),
+  15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+  text-align: left;
+}
+.btn{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 40px;
+  padding: 8px 15px;
+  margin-top: 50px;
+  background-color: rgb(233, 231, 231);
+  transition: 0.5s;
+  border: solid 3px rgba(255, 255, 255, 0);
+  border-radius: 30px;
+  color: rgba(0, 0, 0, 0.22);
+  text-shadow: 0 0 1px rgb(68, 68, 68);
+}
+.btn:hover{
+  border: solid 3px rgb(255, 255, 255);
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+}
+.submit{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  padding: 8px 15px;
+  margin-top: 50px;
+  background-color: rgb(233, 231, 231);
+  transition: 0.5s;
+  border: solid 3px rgba(255, 255, 255, 0);
+  border-radius: 30px;
+  color: rgb(0, 0, 0);
+  text-shadow: 0 0 1px rgb(68, 68, 68);
+}
+.submit:hover{
+  border: solid 3px rgb(255, 255, 255);
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+}
+
+.note{
+  font-size: 10px;
+}
+
+.answer {
+  font-size: auto;
+  width: 300px;
+  height: 5px;
+  background:transparent;
+  padding: 30px;
+  margin: auto;
+  font-weight: lighter;
+  text-align: center;
+  border-bottom: black;
+  border: transparent ;
+  outline: 0;
+}
+answer:hover {
+  border:transparent;
+}
+answer: {
+  border:transparent;
+}
+.bg{
+  background-image: url("assets/logoPoint.png");
+}
+.borderBottom{
+  border-bottom: solid 1px;
+  color: black;
+  position: absolute;
+  width: 45%;
+  margin-left: 12.5%;
+}
+.formCont {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 300px;
+  height: 450px;
+  padding: 10%;
+}
+.bloque{
+  height: 200px;
+  width: 220px;
+  margin: 2px 2px;
+  border-radius: 12px;
+  background-color: rgba(230, 230, 230, .5);
+  border: rgb(255, 255, 255) 3px solid;
+}
+.bloque:hover{
+  border: solid 3px rgb(255, 255, 255);
+  box-shadow: 15px 15px 20px 5px rgba(119, 119, 119, 0.3),
+  -15px -15px 20px 5px rgba(255, 255, 255, 0.8);
+}
